crates/daemon/tests/snapshots/cli_help__cli_help_undo.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Undo a recent destructive mutation by its id (~60s window). The mutation id is printed by `archive`, `trash`, `spam`, `mark-read`, `read-archive` and `desk done`; copy it from there

Usage: mxr undo [OPTIONS] <MUTATION_ID>

Arguments:
  <MUTATION_ID>

Options:
      --dry-run          Show which undo would run without mutating state
      --format <FORMAT>  [possible values: table, json, jsonl, csv, ids]
  -h, --help             Print help
