crates/daemon/tests/snapshots/cli_help__cli_help_unread.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Mark message as unread

Usage: mxr unread [OPTIONS] [MESSAGE_ID]...

Arguments:
  [MESSAGE_ID]...

Options:
      --search <SEARCH>
      --yes
      --dry-run
      --format <FORMAT>  [possible values: table, json, jsonl, csv, ids]
  -h, --help             Print help
