crates/daemon/tests/snapshots/cli_help__cli_help_unsnooze.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Unsnooze a message

Usage: mxr unsnooze [OPTIONS] [MESSAGE_ID]...

Arguments:
  [MESSAGE_ID]...

Options:
      --account <ACCOUNT>
      --all                Unsnooze all
      --dry-run            Show which messages would be unsnoozed without performing the mutation
      --format <FORMAT>    [possible values: table, json, jsonl, csv, ids]
  -h, --help               Print help
