crates/daemon/tests/snapshots/cli_help__cli_help_unstar.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Unstar a message

Usage: mxr unstar [OPTIONS] [MESSAGE_ID]...

Arguments:
  [MESSAGE_ID]...

Options:
      --search <SEARCH>
      --account <ACCOUNT>
      --yes
      --dry-run
      --format <FORMAT>    [possible values: table, json, jsonl, csv, ids]
  -h, --help               Print help
