crates/daemon/tests/snapshots/cli_help__cli_help_unsubscribe.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Unsubscribe from a mailing list.

Positional argument accepts either a message id (uses the List-Unsubscribe header on that exact message) or an email address (`alice@example.com`), which is rewritten to `--search "from:alice@example.com"` and acts on the most recent match. Combine with `--search` to scope an address-wide unsubscribe to a label or date range.

Usage: mxr unsubscribe [OPTIONS] [MESSAGE_ID_OR_ADDRESS]...

Arguments:
  [MESSAGE_ID_OR_ADDRESS]...


Options:
      --yes


      --search <SEARCH>


      --account <ACCOUNT>


      --dry-run


      --purge
          Unsubscribe, then mark read and archive the sender's whole footprint

      --archive-on-no-method
          With --purge, archive the footprint even if no List-Unsubscribe method exists

      --keep-mail
          With --purge, unsubscribe using the previewed method and keep existing mail

      --preview-token <PREVIEW_TOKEN>
          Commit an earlier --purge --dry-run preview exactly once. Requires --yes

      --format <FORMAT>
          [possible values: table, json, jsonl, csv, ids]

  -h, --help
          Print help (see a summary with '-h')
