crates/daemon/tests/snapshots/cli_help__cli_help_updates.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Notifications gathered twice a day. Read the digest, then let go.

Automated mail is gathered into a digest at fixed cuts, 08:00 and 16:30 by default (`updates.cuts` in config, one to four times). Each source is one line with its latest fact, the numbers it quotes and, where the previous message of the same kind quoted the same unit, the change, computed by code. Lines sort into Needs a look, Changed and Routine. Parcels, builds and incidents show where they are now. A new sign-in, a failed payment or a delivery problem goes to To do on arrival. One-time codes, sign-in alerts and offers expire and never show past their window.

With no subcommand, prints the latest digest and what arrived since.

Usage: mxr updates [OPTIONS] [COMMAND]

Commands:
  let-go  Let go of the digest: every update in the cut leaves Updates, and what no other mode holds is archived at your provider. Prints the preview, then lets go of exactly that set; mail that arrives after the cut stays. Prints an undo id for `mxr undo`
  source  Tune a source: every-digest, changes-only, muted or breakthrough (every message to To do on arrival)
  help    Print this message or the help of the given subcommand(s)

Options:
      --cut <CUT>
          A past cut, as its time ("08:00") or RFC3339; the latest cut when omitted

      --expired
          List every update past its relevancy window (one-time codes, sign-in alerts, offers) instead of hiding them

      --account <ACCOUNT>
          Limit to one account; the default covers every account

      --format <FORMAT>
          [possible values: table, json, jsonl, csv, ids]

  -h, --help
          Print help (see a summary with '-h')
