crates/daemon/tests/snapshots/cli_help__cli_help_updates_let_go.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Let go of the digest: every update in the cut leaves Updates, and what no other mode holds is archived at your provider. Prints the preview, then lets go of exactly that set; mail that arrives after the cut stays. Prints an undo id for `mxr undo`

Usage: mxr updates let-go [OPTIONS]

Options:
      --source <SOURCE>    Only this source, as the digest names it ("github.com/acme/api")
      --dry-run            Show what would be let go without changing anything
      --cut <CUT>          A past cut, as its time ("08:00") or RFC3339; the latest cut when omitted
      --account <ACCOUNT>  Limit to one account; the default covers every account
      --format <FORMAT>    [possible values: table, json, jsonl, csv, ids]
  -h, --help               Print help
