crates/daemon/tests/snapshots/cli_help__cli_help_version.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Show version

Usage: mxr version

Options:
  -h, --help  Print help
